--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Vue + express + heroku boilerplate</title>
+  <title>Criticize!</title>
 </head>
 
 <body>
